# cookbook

./: LICENSE  README.md
multimodal-rag-nemotron/: .gitignore  README.md  app.py  build_project.sh  chainlit.md  config.toml  pyproject.toml
multimodal-rag-nemotron/.chainlit/: config.toml
multimodal-rag-nemotron/src/: index_documents.py  parse_pdfs_with_vllm.py  pipeline.py
multimodal-rag-nemotron/src/nemotron_parse_utils/: __init__.py  latex2html.py  postprocessing.py
